# Civic-connect

./: README.md
Civic-Connect/: app.py  pyproject.toml  replit.md
Civic-Connect/attached_assets/: Pasted-The-system-revolves-around-an-easy-to-use-mobile-interface-that-allows-users-to-submit-reports-in-re-1758002165323_1758002165325.txt
Civic-Connect/data/: issues.json  users.json
Civic-Connect/pages/: 1_Report_Issue.py  2_Track_Issues.py  3_Admin_Dashboard.py  4_Analytics.py
Civic-Connect/utils/: 4_Analytics.py  ai_categorizer.py  auth.py  data_manager.py
