import folium
[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "openai>=1.107.3",
    "streamlit-folium>=0.25.1",
    "streamlit>=1.49.1",
    "plotly>=6.3.0",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "numpy>=2.3.3",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",
]
